..F....... [ZBXNEXT-1407] fixed multiselect alignment in action condition configuration page
git-svn-id: svn://svn.zabbix.com/branches/dev@36402 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-1407/frontends/php/styles/default.css
+++ b/ZBXNEXT-1407/frontends/php/styles/default.css
@@ -149,7 +149,10 @@ form { margin: 0; }
 .input[disabled] { color: #ACA899; cursor: default; }
 .input[disabled]:focus { text-decoration: none; border-color: #ACA899; }
 .input[disabled]:hover { text-decoration: none; border-color: #ACA899; }
-.select { -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; height: 14px; line-height: 14px; }
+.select {
+	margin: 0 2px 0 0; cursor: pointer; height: 14px; line-height: 14px;
+	-moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box;
+}
 select[multiple="multiple"], select.openView { height: auto; }
 input.formlist { padding-top: 2px; padding-bottom: 2px; }
 input[type="button"],
@@ -167,7 +170,6 @@ input.jqueryinput,
 textarea.textarea_standard,
 textarea.textarea_big { height: auto; }
 
-.select { cursor: pointer; margin: 1px 2px 1px 0; }
 .selectShorten { width: 200px; }
 .radio { margin: 2px 2px 2px 0; vertical-align: top; }
 .checkbox { padding: 0; border: 0; }
@@ -503,7 +505,7 @@ div.suggest { position: absolute; border: 1px #5C7099 solid; width: 162px; z-ind
 .flickerfreescreen .shadow { background-color: #000000; }
 
 /* multiselect */
-.multiselect { margin: 1px 2px 1px 1px; width: 317px; position: relative; }
+.multiselect { margin: 0 2px 0 0; width: 317px; position: relative; }
 .multiselect input[type="text"] {
 	margin: 0 0 0 4px; padding: 2px 0 0 4px; top: 0; left: 0; min-height: 14px; position: absolute; z-index: 10;
 	background: none; border: none; outline: none;
